# aiosqlite

./: .flake8  .gitignore  .mailmap  .ptrconfig  .pylint  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  makefile  mypy.ini  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml  issue_template.md
.github/workflows/: build.yml  ci.yml
aiosqlite/: __init__.py  __version__.py  context.py  core.py  cursor.py
aiosqlite/tests/: __init__.py  __main__.py  helpers.py  perf.py  smoke.py
docs/: api.rst  changelog.rst  conf.py  index.rst
docs/_static/: custom.css
tests/: __init__.py  __main__.py  perf.py  smoke.py
