[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiosqlite"
readme = "README.rst"
license = {file="LICENSE"}
dynamic = ["version", "description"]
authors = [
    {name="Amethyst Reese", email="amethyst@n7.gg"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "attribution==1.8.0",
    "build>=1.2",
    "coverage[toml]==7.8.0",
    "flit==3.12.0",
    "ruff==0.11.12",
    "mypy==1.16.0",
    "ufmt==2.8.0",
    "usort==1.0.8.post1",
]
docs = [
    "sphinx==8.1.3",
    "sphinx-mdinclude==0.6.2",
]

[project.urls]
Documentation = "https://aiosqlite.omnilib.dev"
Github = "https://github.com/omnilib/aiosqlite"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "aiosqlite"
package = "aiosqlite"
ignored_authors = ["dependabot"]
signed_tags = true
version_file = true

[tool.coverage.run]
branch = true
include = ["aiosqlite/*"]
omit = ["aiosqlite/tests/*"]

[tool.coverage.report]
fail_under = 75
precision = 1
show_missing = true
skip_covered = true

[tool.ruff.lint]
extend-select = [
    "B",      # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
]

[tool.ruff.lint.per-file-ignores]
"aiosqlite/tests/__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.9"

[[tool.mypy.overrides]]
module = "aiosqlite.tests.perf"
follow_imports = "silent"
